# agriflow

./: .env.example  .gitignore  .gitkeep-init  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pyproject.toml
apps/web/: next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/search/: route.ts
apps/web/lib/: configurator.ts  provenance.ts  verify.ts
apps/web/prompts/: search.ts
crew/: __init__.py  agents.py  orchestrator.py  tools.py
docs/: OUTREACH_TEMPLATES.md  ROADMAP.md  ci.yml.template
legal/: ai_systems.md  gdpr_basis.md  privacy.md  terms.md
pipeline/: __init__.py  ingest.py  modal_app.py
supabase/: config.toml
supabase/migrations/: 0001_init.sql
