[project]
name = "agriflow"
version = "0.1.0"
description = "AgriFlow — async ingestion pipeline + CrewAI agent crew for the European agri-data middleware."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "AgriFlow contributors" }]
keywords = ["agriculture", "europe", "supabase", "crewai", "scraping"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  # async HTTP + parsing
  "httpx[http2]>=0.27",
  "selectolax>=0.3.21",
  "tenacity>=9.0",
  "pydantic>=2.9",
  "python-dateutil>=2.9",

  # Supabase
  "supabase>=2.9",
  "postgrest>=0.18",

  # observability
  "structlog>=24.4",
  "sentry-sdk>=2.17",

  # utilities
  "pyarrow>=18.0",
  "orjson>=3.10",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
crew = [
  "crewai>=0.80",
  "crewai-tools>=0.14",
  "openai>=1.55",
  "groq>=0.13",
  "mistralai>=1.2",
]
pipeline = [
  "playwright>=1.48",
  "modal>=0.66",
]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "respx>=0.21",
  "ipython>=8.29",
]

[project.scripts]
agriflow-ingest = "pipeline.ingest:main"
agriflow-crew = "crew.orchestrator:main"

[project.urls]
Homepage = "https://agriflow.eu"
Repository = "https://github.com/brudercode/agriflow"
Issues = "https://github.com/brudercode/agriflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "crew"]

# ---- Tooling ----
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["apps/web", "supabase"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["apps/web", "supabase"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=pipeline --cov=crew"

[tool.uv]
dev-dependencies = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]
